crates/vescpkg-rs/tests/ui/legacy_surface_is_not_public.stderr
error[E0432]: unresolved imports `vescpkg_rs::app_data_packet`, `vescpkg_rs::encode_integer`, `vescpkg_rs::ProtocolFrame`, `vescpkg_rs::FirmwareThreadHandle`, `vescpkg_rs::FirmwareThreadPair`, `vescpkg_rs::FirmwareThreadPairSpec`, `vescpkg_rs::FirmwareThreadSpec`, `vescpkg_rs::ThreadGroup`, `vescpkg_rs::ThreadHandle`, `vescpkg_rs::WireCommand`, `vescpkg_rs::WireVersion`
 --> tests/ui/legacy_surface_is_not_public.rs:2:5
  |
2 |     app_data_packet, bindings, encode_integer, ffi, PackageProgramAddress, ProtocolFrame,
  |     ^^^^^^^^^^^^^^^            ^^^^^^^^^^^^^^                              ^^^^^^^^^^^^^ no `ProtocolFrame` in the root
  |     |                          |
  |     |                          no `encode_integer` in the root
  |     no `app_data_packet` in the root
3 |     FirmwareThreadHandle, FirmwareThreadPair, FirmwareThreadPairSpec, FirmwareThreadSpec,
  |     ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^ no `FirmwareThreadSpec` in the root
  |     |                     |                   |
  |     |                     |                   no `FirmwareThreadPairSpec` in the root
  |     |                     no `FirmwareThreadPair` in the root
  |     no `FirmwareThreadHandle` in the root
4 |     ThreadGroup, ThreadHandle, WireCommand, WireVersion, PackageStart,
  |     ^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^
  |     |            |             |
  |     |            |             no `WireCommand` in the root
  |     |            no `ThreadHandle` in the root
  |     no `ThreadGroup` in the root
  |
  = help: consider importing this struct instead:
          vescpkg_rs_sys::ThreadHandle
  = help: consider importing this enum instead:
          vesc_protocol::WireCommand
help: a similar name exists in the module
  |
2 -     app_data_packet, bindings, encode_integer, ffi, PackageProgramAddress, ProtocolFrame,
2 +     AppDataPacket, bindings, encode_integer, ffi, PackageProgramAddress, ProtocolFrame,
  |
help: a similar name exists in the module
  |
3 -     FirmwareThreadHandle, FirmwareThreadPair, FirmwareThreadPairSpec, FirmwareThreadSpec,
3 +     FirmwareThread, FirmwareThreadPair, FirmwareThreadPairSpec, FirmwareThreadSpec,
  |
help: a similar name exists in the module
  |
3 -     FirmwareThreadHandle, FirmwareThreadPair, FirmwareThreadPairSpec, FirmwareThreadSpec,
3 +     FirmwareThreadHandle, FirmwareThread, FirmwareThreadPairSpec, FirmwareThreadSpec,
  |
help: a similar name exists in the module
  |
3 -     FirmwareThreadHandle, FirmwareThreadPair, FirmwareThreadPairSpec, FirmwareThreadSpec,
3 +     FirmwareThreadHandle, FirmwareThreadPair, FirmwareThreadPairSpec, FirmwareThread,
  |
help: a similar name exists in the module
  |
4 -     ThreadGroup, ThreadHandle, WireCommand, WireVersion, PackageStart,
4 +     ThreadGroup, ThreadName, WireCommand, WireVersion, PackageStart,
  |

error[E0603]: module `bindings` is private
 --> tests/ui/legacy_surface_is_not_public.rs:2:22
  |
2 |     app_data_packet, bindings, encode_integer, ffi, PackageProgramAddress, ProtocolFrame,
  |                      ^^^^^^^^ private module
  |
note: the module `bindings` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:30:0

error[E0603]: module `ffi` is private
 --> tests/ui/legacy_surface_is_not_public.rs:2:48
  |
2 |     app_data_packet, bindings, encode_integer, ffi, PackageProgramAddress, ProtocolFrame,
  |                                                ^^^ private module
  |
note: the module `ffi` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:47:0

error[E0603]: struct `PackageProgramAddress` is private
 --> tests/ui/legacy_surface_is_not_public.rs:2:53
  |
2 |     app_data_packet, bindings, encode_integer, ffi, PackageProgramAddress, ProtocolFrame,
  |                                                     ^^^^^^^^^^^^^^^^^^^^^ private struct
  |
note: the struct `PackageProgramAddress` is defined here
 --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:157:43
help: import `PackageProgramAddress` directly
  |
2 |     app_data_packet, bindings, encode_integer, ffi, vescpkg_rs::types::loader::PackageProgramAddress, ProtocolFrame,
  |                                                     +++++++++++++++++++++++++++

error[E0603]: struct `LoaderInfo` is private
  --> tests/ui/legacy_surface_is_not_public.rs:12:25
   |
12 |     let _ = vescpkg_rs::LoaderInfo::as_mut_ptr;
   |                         ^^^^^^^^^^ private struct
   |
note: the struct `LoaderInfo` is defined here
  --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:157:31
help: import `LoaderInfo` directly
   |
12 -     let _ = vescpkg_rs::LoaderInfo::as_mut_ptr;
12 +     let _ = vescpkg_rs::types::loader::LoaderInfo;
   |

error[E0603]: struct `LoaderInfo` is private
  --> tests/ui/legacy_surface_is_not_public.rs:13:55
   |
13 |     let _ = PackageStart::from_raw::<&mut vescpkg_rs::LoaderInfo>;
   |                                                       ^^^^^^^^^^ private struct
   |
note: the struct `LoaderInfo` is defined here
  --> <BASE_DIR>/crates/vescpkg-rs/src/lib.rs:157:31
help: import `LoaderInfo` directly
   |
13 |     let _ = PackageStart::from_raw::<&mut vescpkg_rs::types::loader::LoaderInfo>;
   |                                                       +++++++++++++++

error[E0599]: no function or associated item named `as_mut_ptr` found for struct `vescpkg_rs::__macro_support::LoaderInfo` in the current scope
  --> tests/ui/legacy_surface_is_not_public.rs:12:37
   |
12 |     let _ = vescpkg_rs::LoaderInfo::as_mut_ptr;
   |                                     ^^^^^^^^^^ function or associated item not found in `vescpkg_rs::__macro_support::LoaderInfo`

error[E0624]: associated function `from_raw` is private
  --> tests/ui/legacy_surface_is_not_public.rs:13:27
   |
13 |     let _ = PackageStart::from_raw::<&mut vescpkg_rs::LoaderInfo>;
   |                           ^^^^^^^^ private associated function
   |
  --> <BASE_DIR>/crates/vescpkg-rs/src/init.rs:209:4
   |
   = note: private associated function defined here

error[E0107]: associated function takes 0 generic arguments but 1 generic argument was supplied
  --> tests/ui/legacy_surface_is_not_public.rs:13:27
   |
13 |     let _ = PackageStart::from_raw::<&mut vescpkg_rs::LoaderInfo>;
   |                           ^^^^^^^^------------------------------- help: remove the unnecessary generics
   |                           |
   |                           expected 0 generic arguments
